--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.6.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+
+	id "com.moowork.node" version "1.3.1"
 }
 
 group = 'com.shift'
@@ -28,3 +30,18 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+def webappDir = "$projectDir/frontend"
+
+task appNpmInstall(type: NpmTask) {
+	workingDir = file("${webappDir}")
+	args = ["run", "build"]
+}
+
+task copyWebApp(type: Copy) {
+	from 'frontend/build'
+	into 'build/resources/main/static'
+}
+
+copyWebApp.dependsOn(appNpmInstall)
+compileJava.dependsOn(copyWebApp)
