--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !node_modules
+**/src/main/resources/application.properties
+**/src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
